--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -11,6 +11,15 @@
 
     <body>
         <h1>Logan Koeller's Web Page</h1>
+
+        <nav>
+            <ul>
+                <li><a href="index.html" title="Home Page">Home</a></li>
+                <li><a href="page2.html" title="Second Page">Second Page</a></li>
+            </ul>
+        </nav>
+
+        <img src="Victor.JPG" alt="Young Victor from Arcane holding his toy boat." height="525" width="623">
         
         <!--Main body with (hopefully) good info below-->
         <h3>About</h3>
